--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.9.0",
+    "react-date-range": "^2.0.1",
+    "react-datepicker": "^9.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
